--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 
@@ -17,5 +17,6 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
 
 
